# context-engineering-intro

PRPs/: adventure-generation-agent.md
adventure-agent/: .env  .env.example  PLAN.md  README.md  agent.py  pyproject.toml  test_prompt.txt  validate_imports.py
adventure-agent/examples/: BlackHawks_TroublesInHyperspace_CYOA.story  George_Lucas.author  Terry_Pratchett.author  The_Color_Of_Magic_CYOA.story  demo.adv
adventure-agent/mcp_server/: pyproject.toml
adventure-agent/mcp_server/adventure_storyteller_mcp/: __init__.py  server.py
adventure-agent/mcp_server/adventure_storyteller_mcp/tools/: __init__.py  adventure_format_validator.py
adventure-agent/src/adventure_agent/: __init__.py  agent.py  cli.py  models.py
adventure-agent/src/adventure_agent/parsers/: __init__.py  adv_generator.py  author_parser.py  story_parser.py
adventure-agent/src/adventure_agent/tools/: __init__.py  adv_validator.py  branch_pruner.py  character_tracker.py  choice_analyzer.py  coherence_analyzer.py  ending_optimizer.py  flow_visualizer.py  inventory_integrator.py  replayability_scorer.py  storyline_generator.py
adventure-agent/tests/: __init__.py  test_agent.py
adventure-agent/tests/test_parsers/: __init__.py  test_author_parser.py  test_story_parser.py
adventure-agent/tests/test_tools/: __init__.py  test_adv_validator.py  test_choice_analyzer.py
examples/: BlackHawks_TroublesInHyperspace.adv  BlackHawks_TroublesInHyperspace_CYOA.story  George_Lucas.author  QuestForTheOrbexStone.adv  StarWars.adv  The_Color_Of_Magic_CYOA.story  demo.adv  discworld_author.md  game.adv  orbexPart1.adv  star_wars_author.md  star_wars_story.md
src/: browserInfo.js  commandHandler.js  fileParser.js  gameState.js  index.html  inventoryManager.js  main.js  menuHandler.js  server.js  styles.css  terminal.js  userInput.js
